 * Fix: Specific page permission checks are now enforced when viewing a page revision (Andy Chosak)
 * Fix: `pageurl` and `slugurl` tags no longer fail when `request.site` is `None` (Samir Shah)
 * Fix: Output form media on add/edit image forms with custom models (Matt Westcott)


2.6.1 (05.08.2019)
~~~~~~~~~~~~~~~~~~

 * Fix: Prevent Javascript errors caused by unescaped quote characters in translation strings (Matt Westcott)


2.6 (01.08.2019)
~~~~~~~~~~~~~~~~

 * Removed support for Python 3.4
 * Added support for `short_description` for field labels in modeladmin's `InspectView` (Wesley van Lee)
 * Rearranged SCSS folder structure to the client folder and split them approximately according to ITCSS. (Naomi Morduch Toubman, Jonny Scholes, Janneke Janssen, Hugo van den Berg)
 * Added support for specifying cell alignment on TableBlock (Samuel Mendes)
 * Added more informative error when a non-image object is passed to the `image` template tag (Deniz Dogan)
 * Added more ARIA landmarks across the admin interface and welcome page for screen reader users to navigate the CMS more easily (Beth Menzies)
 * Added ButtonHelper examples in the modelAdmin primer page within documentation (Kalob Taulien)
 * Multiple clarifications, grammar and typo fixes throughout documentation (Dan Swain)
 * Use correct URL in API example in documentation (Michael Bunsen)
 * Move datetime widget initialiser JS into the widget's form media instead of page editor media (Matt Westcott)
 * Add form field prefixes for input forms in chooser modals (Matt Westcott)
 * Increase font-size across the whole admin (Beth Menzies, Katie Locke)
 * Improved text color contrast across the whole admin (Beth Menzies, Katie Locke)
 * Added consistent focus outline styles across the whole admin (Thibaud Colas)
 * Removed version number from the logo link’s title. The version can now be found under the Settings menu (Thibaud Colas)